--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ num-traits = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-vst2-sys = "0.2.0"
+vst2-sys = { git = "https://github.com/WeirdConstructor/vst2-sys.git" }
+#vst2-sys = { path = "../vst2-sys" }
+keyboard-types = { version = "0.5.0", default-features = false }
 raw-window-handle = "0.3"
 
 [dev-dependencies.packed_simd]
